feat(go.ini):added config file

--- a/config/go.ini
+++ b/config/go.ini
@@ -1,36 +1,32 @@
-# possible values : production, development
-[GENERAL]
-app_mode = development
-; app_mode = production
+[general]
+environment = development
+; environment = production
+ssh = false
 jobs = 3
 
 [development]
-ssh = false
-machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
+machinesID = "127.0.1.1:5001127.0.1.1:5002127.0.1.1:5003"
 
-[production]
-ssh = false
-machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
-
-[paths]
-# Path to where grafana can store temp files, sessions, and the sqlite3 db (if that is used)
-data = /home/git/grafana
-
-[server]
-# Protocol (http or https)
-protocol = http
-
-# The http port  to use
-http_port = 9999
-
-# Redirect to correct domain if host header does not match domain
-# Prevents DNS rebinding attacks
-enforce_domain = true
-
-[local machine1]
+[development machine1]
 port= ":5001"
 ip= "127.0.1.1"
-role= "slave"
-delays= "5s"
+role= "master"
+delays= 
 targets= "127.0.1.1:5002"
 
+[development machine2]
+port= ":5002"
+ip= "127.0.1.1"
+role= "slave"
+delays= ""
+targets= ""
+
+[development machine3]
+port= ":5003"
+ip= "127.0.1.1"
+role= "slave"
+delays= ""
+targets= ""
+
+[production]
+machinesID = ""
