--- a/config/go.ini
+++ b/config/go.ini
@@ -5,7 +5,7 @@ ssh = false
 jobs = 3
 
 [development]
-machinesID = "127.0.1.1:5001127.0.1.1:5002127.0.1.1:5003"
+machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
 
 [development machine1]
 port= ":5001"
