fix(go.ini): fixed parameters dalays and targets

--- a/config/go.ini
+++ b/config/go.ini
@@ -11,22 +11,22 @@ machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
 port= ":5001"
 ip= "127.0.1.1"
 role= "master"
-delays= 
+delays= "5s"
 targets= "127.0.1.1:5002"
 
 [development machine2]
 port= ":5002"
 ip= "127.0.1.1"
 role= "slave"
-delays= ""
-targets= ""
+delays=
+targets=
 
 [development machine3]
 port= ":5003"
 ip= "127.0.1.1"
 role= "slave"
-delays= ""
-targets= ""
+delays=
+targets=
 
 [production]
 machinesID = ""
