feat(folders): updated folder structures

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -6,6 +6,8 @@ jobs = 3
 
 [development]
 machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
+machinesName = "machine1,machine2,machine3"
+path = "go run ~/go/src/sd_paxos/main.go"
 
 [development machine1]
 port= ":5001"
