fix(test): created global test to ssh connection

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -3,11 +3,13 @@ environment = development
 ; environment = production
 ssh = false
 jobs = 3
+log = false
+mode = chandy
 
 [development]
 machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
 machinesName = "machine1,machine2,machine3"
-path = "go run ~/go/src/sd_paxos/main.go"
+mainPath = "cd ~/go/src/sd_paxos/src ; go run main.go -name="
 
 [development machine1]
 port= ":5001"
