fix(config-test): update utils_test.go and config file

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -33,4 +33,29 @@ delays=
 targets=
 
 [production]
-machinesID = ""
+; export PATH=$PATH:/usr/local/go/bin;export GOPATH=/home/a802400/go;export GOROOT=/usr/local/go;
+; /usr/local/go/bin/go run /home/a802400/go/sd_paxos/app/main.go 
+machinesID = "155.210.154.199:1400,155.210.154.209:1400,155.210.154.208:1400"
+machinesName = "machine1,machine2,machine3"
+mainPath = "cd ~/go/src/sd_paxos/src ; go run main.go -name="
+
+[production machine1]
+port= ":1400"
+ip= "155.210.154.199"
+role= "master"
+delays= "5s"
+targets= "155.210.154.199:1400"
+
+[production machine2]
+port= ":1400"
+ip= "155.210.154.209"
+role= "slave"
+delays=
+targets= 
+
+[production machine3]
+port= ":1400"
+ip= "155.210.154.208"
+role= "slave"
+delays=
+targets=
