fix(multicast): fixed multicast error in multicastIP

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -4,12 +4,12 @@ environment = development
 ssh = false
 jobs = 3
 log = false
-mode = chandy
+mode = udp
 
 [development]
 machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
 machinesName = "machine1,machine2,machine3"
-mainPath = "cd ~/go/src/sd_paxos/src ; go run main.go -name="
+mainPath = "cd ~/go/src/sd_paxos/src;go run main.go -name="
 
 [development machine1]
 port= ":5001"
