--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -1,15 +1,15 @@
 [general]
-environment = development
-; environment = production
+; environment = development
+environment = production
 ssh = false
 jobs = 3
 log = false
-mode = udp
+mode = tcp
 
 [development]
 machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
 machinesName = "machine1,machine2,machine3"
-mainPath = "cd ~/go/src/sd_paxos/src;go run main.go -name="
+mainPath = "cd ~/go/src/sd_paxos/src && go run main.go -name="
 
 [development machine1]
 port= ":5001"
@@ -33,29 +33,30 @@ delays=
 targets=
 
 [production]
+; 155.210.154.{192, 196, 200, 203, 206, 208, 210}
 ; export PATH=$PATH:/usr/local/go/bin;export GOPATH=/home/a802400/go;export GOROOT=/usr/local/go;
 ; /usr/local/go/bin/go run /home/a802400/go/sd_paxos/app/main.go 
-machinesID = "155.210.154.199:1400,155.210.154.209:1400,155.210.154.208:1400"
+machinesID = "155.210.154.200:1400,155.210.154.203:1400,155.210.154.206:1400"
 machinesName = "machine1,machine2,machine3"
-mainPath = "cd ~/go/src/sd_paxos/src ; go run main.go -name="
+mainPath = "cd ~/go/src/sd_paxos/src && /usr/local/go/bin/go run main.go -name="
 
 [production machine1]
 port= ":1400"
-ip= "155.210.154.199"
+ip= "155.210.154.200"
 role= "master"
 delays= "5s"
-targets= "155.210.154.199:1400"
+targets= "155.210.154.203:1400"
 
 [production machine2]
 port= ":1400"
-ip= "155.210.154.209"
+ip= "155.210.154.203"
 role= "slave"
 delays=
 targets= 
 
 [production machine3]
 port= ":1400"
-ip= "155.210.154.208"
+ip= "155.210.154.206"
 role= "slave"
 delays=
 targets=
