fix(files): fixed many files

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -1,10 +1,10 @@
 [general]
-; environment = development
-environment = production
+environment = development
+; environment = production
 ssh = false
 jobs = 3
 log = false
-mode = tcp
+mode = chandy
 
 [development]
 machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
@@ -35,7 +35,6 @@ targets=
 [production]
 ; 155.210.154.{192, 196, 200, 203, 206, 208, 210}
 ; export PATH=$PATH:/usr/local/go/bin;export GOPATH=/home/a802400/go;export GOROOT=/usr/local/go;
-; /usr/local/go/bin/go run /home/a802400/go/sd_paxos/app/main.go 
 machinesID = "155.210.154.200:1400,155.210.154.203:1400,155.210.154.206:1400"
 machinesName = "machine1,machine2,machine3"
 mainPath = "cd ~/go/src/sd_paxos/src && /usr/local/go/bin/go run main.go -name="
