fix(ssh): fixed ssh and move user and other data to .ini

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -1,12 +1,14 @@
 [general]
-environment = development
-; environment = production
+; environment = development
+environment = production
+IDRsa = /home/smmanrrique/.ssh/id_rsa
 ssh = false
 jobs = 3
-log = false
-mode = chandy
+log = true
+mode = tcp
 
 [development]
+user = smmanrrique
 machinesID = "127.0.1.1:5001,127.0.1.1:5002,127.0.1.1:5003"
 machinesName = "machine1,machine2,machine3"
 mainPath = "cd ~/go/src/sd_paxos/src && go run main.go -name="
@@ -35,6 +37,7 @@ targets=
 [production]
 ; 155.210.154.{192, 196, 200, 203, 206, 208, 210}
 ; export PATH=$PATH:/usr/local/go/bin;export GOPATH=/home/a802400/go;export GOROOT=/usr/local/go;
+user = a802400
 machinesID = "155.210.154.200:1400,155.210.154.203:1400,155.210.154.206:1400"
 machinesName = "machine1,machine2,machine3"
 mainPath = "cd ~/go/src/sd_paxos/src && /usr/local/go/bin/go run main.go -name="
