fix(ssh): fixed ssh and move user and other data to .ini

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -5,7 +5,7 @@ IDRsa = /home/smmanrrique/.ssh/id_rsa
 ssh = false
 jobs = 3
 log = true
-mode = tcp
+mode = udp
 
 [development]
 user = smmanrrique
