feat(reports): update report sd_paxos/reports/Informe _Practica1_ Sistemas Distribuidos.pdf

--- a/src/config/go.ini
+++ b/src/config/go.ini
@@ -1,11 +1,11 @@
 [general]
-; environment = development
-environment = production
+environment = development
+; environment = production
 IDRsa = /home/smmanrrique/.ssh/id_rsa
 ssh = false
 jobs = 3
 log = true
-mode = udp
+mode = chandy
 
 [development]
 user = smmanrrique
